[package]
name = "modmail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
twilight-cache-inmemory = "0.15.2"
twilight-gateway = "0.15.4"
twilight-http = "0.15.2"
twilight-model = "0.15.2"
twilight-util = { version = "0.15.2", features = ["builder"] }
