[package]
name = "modmail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
dotenvy = "0.15.7"
env_logger = "0.11.1"
log = "0.4.20"
tokio = { version = "1.36.0", features = ["full"] }
twilight-cache-inmemory = "0.15.4"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
twilight-util = { version = "0.15.4", features = ["builder"] }
